--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,10 +1,16 @@
 # Action Cable uses Redis by default to administer connections, channels, and sending/receiving messages over the WebSocket.
 production:
+
   adapter: redis
-  url: redis://localhost:6379/1
+  url: redis://redistogo:177b77bf22f60aab5f1c80e7504e8428@chubb.redistogo.com:9847/
+  host: chubb.redistogo.com
+  password: 177b77bf22f60aab5f1c80e7504e8428
+  inline: true
+  timeout: 1
 
 development:
   adapter: async
+  url: redis://localhost:6379/1
 
 test:
   adapter: async
